<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="366dp"
            android:layout_height="280dp"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/customername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:text="@string/name"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/period"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="100dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/balance"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/lavender"
                android:minWidth="48dp"
                android:text="@string/btnEdit" />

            <Button
                android:id="@+id/btndelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/lavender"
                android:text="@string/btnDelete" />

            <ProgressBar
                android:id="@+id/ProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="10dp"
                android:indeterminate="false"
                android:maxHeight="10dip"
                android:minHeight="10dip"
                android:progress="50"
                android:progressDrawable="@drawable/green_progress" />


            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:text="currency"
                android:textSize="20sp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>